// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`shipped design tokens (golden record) > resolve to the recorded values: dark (app setting) · ar 1`] = `
{
  "--bp-2xl": "1440px",
  "--bp-lg": "900px",
  "--bp-md": "600px",
  "--bp-sm": "360px",
  "--bp-xl": "1200px",
  "--color-accent": "#62b5ab",
  "--color-accent-hover": "#94ccc5",
  "--color-accent-subtle": "#12302d",
  "--color-accent-text": "#86d3c9",
  "--color-amber-300": "#f3bd5a",
  "--color-amber-50": "#fff5e0",
  "--color-amber-500": "#c47600",
  "--color-amber-600": "#955800",
  "--color-amber-900": "#2f2311",
  "--color-bg": "#0e1415",
  "--color-blue-300": "#8fbdf5",
  "--color-blue-50": "#eaf1fb",
  "--color-blue-600": "#1f5daa",
  "--color-blue-700": "#194c8c",
  "--color-blue-900": "#102338",
  "--color-border": "#2b3639",
  "--color-border-strong": "#6b7b7f",
  "--color-brand-100": "#c6e4e0",
  "--color-brand-200": "#94ccc5",
  "--color-brand-300": "#62b5ab",
  "--color-brand-400": "#34998f",
  "--color-brand-50": "#e7f3f1",
  "--color-brand-500": "#177d74",
  "--color-brand-600": "#0f665f",
  "--color-brand-700": "#0c534d",
  "--color-brand-800": "#09403c",
  "--color-brand-900": "#07302d",
  "--color-brand-950": "#041f1d",
  "--color-danger": "#ff998d",
  "--color-danger-hover": "#ffb3aa",
  "--color-danger-subtle": "#3a1714",
  "--color-focus-ring": "#86d3c9",
  "--color-green-300": "#76d39a",
  "--color-green-50": "#e9f6ee",
  "--color-green-600": "#1d7a43",
  "--color-green-700": "#166236",
  "--color-green-900": "#0f2a1b",
  "--color-header": "#151d1f",
  "--color-header-border": "#2b3639",
  "--color-info": "#8fbdf5",
  "--color-info-subtle": "#102338",
  "--color-inverse-surface": "#e8eeef",
  "--color-inverse-text": "#121a1c",
  "--color-nav": "#151d1f",
  "--color-nav-border": "#2b3639",
  "--color-nav-item-current": "#12302d",
  "--color-nav-item-hover": "#223033",
  "--color-neutral-0": "#ffffff",
  "--color-neutral-100": "#e3e9ea",
  "--color-neutral-200": "#cbd4d6",
  "--color-neutral-25": "#f8fafa",
  "--color-neutral-300": "#a7b4b7",
  "--color-neutral-400": "#7a898d",
  "--color-neutral-50": "#f2f5f5",
  "--color-neutral-500": "#5b6a6e",
  "--color-neutral-600": "#465357",
  "--color-neutral-700": "#333e41",
  "--color-neutral-800": "#222b2e",
  "--color-neutral-850": "#192123",
  "--color-neutral-900": "#121a1c",
  "--color-neutral-950": "#0b1112",
  "--color-on-accent": "#041f1d",
  "--color-on-danger": "#2a0906",
  "--color-on-header": "#e8eeef",
  "--color-on-header-muted": "#aab7ba",
  "--color-on-nav": "#e8eeef",
  "--color-on-nav-item-current": "#86d3c9",
  "--color-on-nav-muted": "#aab7ba",
  "--color-on-primary": "#041f1d",
  "--color-overlay": "rgba(0, 0, 0, 0.65)",
  "--color-primary": "#62b5ab",
  "--color-primary-hover": "#94ccc5",
  "--color-primary-subtle": "#12302d",
  "--color-primary-text": "#86d3c9",
  "--color-red-300": "#ff998d",
  "--color-red-50": "#fdeeec",
  "--color-red-600": "#b42318",
  "--color-red-700": "#931c14",
  "--color-red-900": "#3a1714",
  "--color-success": "#76d39a",
  "--color-success-subtle": "#0f2a1b",
  "--color-surface": "#151d1f",
  "--color-surface-hover": "#223033",
  "--color-surface-raised": "#1c2628",
  "--color-surface-selected": "#12302d",
  "--color-surface-sunken": "#0a0f10",
  "--color-text": "#e8eeef",
  "--color-text-disabled": "#5e6c70",
  "--color-text-muted": "#aab7ba",
  "--color-text-subtle": "#8e9ca0",
  "--color-warning": "#f3bd5a",
  "--color-warning-strong": "#f3bd5a",
  "--color-warning-subtle": "#2f2311",
  "--duration-base": "160ms",
  "--duration-fast": "100ms",
  "--duration-instant": "0ms",
  "--duration-slow": "240ms",
  "--duration-slower": "360ms",
  "--easing-enter": "cubic-bezier(0, 0, 0, 1)",
  "--easing-exit": "cubic-bezier(0.3, 0, 1, 1)",
  "--easing-standard": "cubic-bezier(0.2, 0, 0, 1)",
  "--elevation-0": "none",
  "--elevation-1": "0 1px 2px rgba(0, 0, 0, 0.40)",
  "--elevation-2": "0 2px 6px rgba(0, 0, 0, 0.45)",
  "--elevation-3": "0 8px 20px rgba(0, 0, 0, 0.50)",
  "--elevation-4": "0 16px 40px rgba(0, 0, 0, 0.60)",
  "--focus-ring": "0 0 0 2px #0e1415, 0 0 0 4px #86d3c9",
  "--font-family-arabic": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-base": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-latin": ""IBM Plex Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, system-ui, sans-serif",
  "--font-family-mono": ""IBM Plex Mono", ui-monospace, "SFMono-Regular", Menlo, Consolas, monospace",
  "--font-size-2xl": "1.6875rem",
  "--font-size-3xl": "2.0625rem",
  "--font-size-4xl": "2.5rem",
  "--font-size-arabic-2xl": "1.6875rem",
  "--font-size-arabic-3xl": "2.0625rem",
  "--font-size-arabic-4xl": "2.5rem",
  "--font-size-arabic-lg": "1.25rem",
  "--font-size-arabic-md": "1.125rem",
  "--font-size-arabic-sm": "0.96875rem",
  "--font-size-arabic-xl": "1.40625rem",
  "--font-size-arabic-xs": "0.84375rem",
  "--font-size-latin-2xl": "1.5rem",
  "--font-size-latin-3xl": "1.875rem",
  "--font-size-latin-4xl": "2.25rem",
  "--font-size-latin-lg": "1.125rem",
  "--font-size-latin-md": "1rem",
  "--font-size-latin-sm": "0.875rem",
  "--font-size-latin-xl": "1.25rem",
  "--font-size-latin-xs": "0.75rem",
  "--font-size-lg": "1.25rem",
  "--font-size-md": "1.125rem",
  "--font-size-sm": "0.96875rem",
  "--font-size-xl": "1.40625rem",
  "--font-size-xs": "0.84375rem",
  "--font-weight-bold": "700",
  "--font-weight-medium": "500",
  "--font-weight-regular": "400",
  "--font-weight-semibold": "600",
  "--letter-spacing-caps": "0",
  "--line-height-arabic-body": "1.7",
  "--line-height-arabic-heading": "1.45",
  "--line-height-body": "1.7",
  "--line-height-heading": "1.45",
  "--line-height-latin-body": "1.5",
  "--line-height-latin-heading": "1.25",
  "--radius-full": "9999px",
  "--radius-lg": "10px",
  "--radius-md": "6px",
  "--radius-none": "0",
  "--radius-sm": "4px",
  "--radius-xl": "16px",
  "--size-bottomnav-height": "64px",
  "--size-content-max": "1280px",
  "--size-control-lg": "48px",
  "--size-control-md": "40px",
  "--size-control-sm": "32px",
  "--size-header-height": "56px",
  "--size-sidenav-collapsed": "72px",
  "--size-sidenav-width": "264px",
  "--size-text-max": "720px",
  "--size-touch-target": "44px",
  "--space-0": "0",
  "--space-0-5": "0.125rem",
  "--space-1": "0.25rem",
  "--space-10": "2.5rem",
  "--space-12": "3rem",
  "--space-16": "4rem",
  "--space-2": "0.5rem",
  "--space-3": "0.75rem",
  "--space-4": "1rem",
  "--space-5": "1.25rem",
  "--space-6": "1.5rem",
  "--space-8": "2rem",
  "--z-base": "0",
  "--z-drawer": "1350",
  "--z-dropdown": "1000",
  "--z-header": "1200",
  "--z-modal": "1400",
  "--z-overlay": "1300",
  "--z-raised": "10",
  "--z-sticky": "1100",
  "--z-toast": "1500",
  "--z-tooltip": "1600",
  "color-scheme": "dark",
}
`;

exports[`shipped design tokens (golden record) > resolve to the recorded values: dark (app setting) · en 1`] = `
{
  "--bp-2xl": "1440px",
  "--bp-lg": "900px",
  "--bp-md": "600px",
  "--bp-sm": "360px",
  "--bp-xl": "1200px",
  "--color-accent": "#62b5ab",
  "--color-accent-hover": "#94ccc5",
  "--color-accent-subtle": "#12302d",
  "--color-accent-text": "#86d3c9",
  "--color-amber-300": "#f3bd5a",
  "--color-amber-50": "#fff5e0",
  "--color-amber-500": "#c47600",
  "--color-amber-600": "#955800",
  "--color-amber-900": "#2f2311",
  "--color-bg": "#0e1415",
  "--color-blue-300": "#8fbdf5",
  "--color-blue-50": "#eaf1fb",
  "--color-blue-600": "#1f5daa",
  "--color-blue-700": "#194c8c",
  "--color-blue-900": "#102338",
  "--color-border": "#2b3639",
  "--color-border-strong": "#6b7b7f",
  "--color-brand-100": "#c6e4e0",
  "--color-brand-200": "#94ccc5",
  "--color-brand-300": "#62b5ab",
  "--color-brand-400": "#34998f",
  "--color-brand-50": "#e7f3f1",
  "--color-brand-500": "#177d74",
  "--color-brand-600": "#0f665f",
  "--color-brand-700": "#0c534d",
  "--color-brand-800": "#09403c",
  "--color-brand-900": "#07302d",
  "--color-brand-950": "#041f1d",
  "--color-danger": "#ff998d",
  "--color-danger-hover": "#ffb3aa",
  "--color-danger-subtle": "#3a1714",
  "--color-focus-ring": "#86d3c9",
  "--color-green-300": "#76d39a",
  "--color-green-50": "#e9f6ee",
  "--color-green-600": "#1d7a43",
  "--color-green-700": "#166236",
  "--color-green-900": "#0f2a1b",
  "--color-header": "#151d1f",
  "--color-header-border": "#2b3639",
  "--color-info": "#8fbdf5",
  "--color-info-subtle": "#102338",
  "--color-inverse-surface": "#e8eeef",
  "--color-inverse-text": "#121a1c",
  "--color-nav": "#151d1f",
  "--color-nav-border": "#2b3639",
  "--color-nav-item-current": "#12302d",
  "--color-nav-item-hover": "#223033",
  "--color-neutral-0": "#ffffff",
  "--color-neutral-100": "#e3e9ea",
  "--color-neutral-200": "#cbd4d6",
  "--color-neutral-25": "#f8fafa",
  "--color-neutral-300": "#a7b4b7",
  "--color-neutral-400": "#7a898d",
  "--color-neutral-50": "#f2f5f5",
  "--color-neutral-500": "#5b6a6e",
  "--color-neutral-600": "#465357",
  "--color-neutral-700": "#333e41",
  "--color-neutral-800": "#222b2e",
  "--color-neutral-850": "#192123",
  "--color-neutral-900": "#121a1c",
  "--color-neutral-950": "#0b1112",
  "--color-on-accent": "#041f1d",
  "--color-on-danger": "#2a0906",
  "--color-on-header": "#e8eeef",
  "--color-on-header-muted": "#aab7ba",
  "--color-on-nav": "#e8eeef",
  "--color-on-nav-item-current": "#86d3c9",
  "--color-on-nav-muted": "#aab7ba",
  "--color-on-primary": "#041f1d",
  "--color-overlay": "rgba(0, 0, 0, 0.65)",
  "--color-primary": "#62b5ab",
  "--color-primary-hover": "#94ccc5",
  "--color-primary-subtle": "#12302d",
  "--color-primary-text": "#86d3c9",
  "--color-red-300": "#ff998d",
  "--color-red-50": "#fdeeec",
  "--color-red-600": "#b42318",
  "--color-red-700": "#931c14",
  "--color-red-900": "#3a1714",
  "--color-success": "#76d39a",
  "--color-success-subtle": "#0f2a1b",
  "--color-surface": "#151d1f",
  "--color-surface-hover": "#223033",
  "--color-surface-raised": "#1c2628",
  "--color-surface-selected": "#12302d",
  "--color-surface-sunken": "#0a0f10",
  "--color-text": "#e8eeef",
  "--color-text-disabled": "#5e6c70",
  "--color-text-muted": "#aab7ba",
  "--color-text-subtle": "#8e9ca0",
  "--color-warning": "#f3bd5a",
  "--color-warning-strong": "#f3bd5a",
  "--color-warning-subtle": "#2f2311",
  "--duration-base": "160ms",
  "--duration-fast": "100ms",
  "--duration-instant": "0ms",
  "--duration-slow": "240ms",
  "--duration-slower": "360ms",
  "--easing-enter": "cubic-bezier(0, 0, 0, 1)",
  "--easing-exit": "cubic-bezier(0.3, 0, 1, 1)",
  "--easing-standard": "cubic-bezier(0.2, 0, 0, 1)",
  "--elevation-0": "none",
  "--elevation-1": "0 1px 2px rgba(0, 0, 0, 0.40)",
  "--elevation-2": "0 2px 6px rgba(0, 0, 0, 0.45)",
  "--elevation-3": "0 8px 20px rgba(0, 0, 0, 0.50)",
  "--elevation-4": "0 16px 40px rgba(0, 0, 0, 0.60)",
  "--focus-ring": "0 0 0 2px #0e1415, 0 0 0 4px #86d3c9",
  "--font-family-arabic": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-base": ""IBM Plex Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, system-ui, sans-serif",
  "--font-family-latin": ""IBM Plex Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, system-ui, sans-serif",
  "--font-family-mono": ""IBM Plex Mono", ui-monospace, "SFMono-Regular", Menlo, Consolas, monospace",
  "--font-size-2xl": "1.5rem",
  "--font-size-3xl": "1.875rem",
  "--font-size-4xl": "2.25rem",
  "--font-size-arabic-2xl": "1.6875rem",
  "--font-size-arabic-3xl": "2.0625rem",
  "--font-size-arabic-4xl": "2.5rem",
  "--font-size-arabic-lg": "1.25rem",
  "--font-size-arabic-md": "1.125rem",
  "--font-size-arabic-sm": "0.96875rem",
  "--font-size-arabic-xl": "1.40625rem",
  "--font-size-arabic-xs": "0.84375rem",
  "--font-size-latin-2xl": "1.5rem",
  "--font-size-latin-3xl": "1.875rem",
  "--font-size-latin-4xl": "2.25rem",
  "--font-size-latin-lg": "1.125rem",
  "--font-size-latin-md": "1rem",
  "--font-size-latin-sm": "0.875rem",
  "--font-size-latin-xl": "1.25rem",
  "--font-size-latin-xs": "0.75rem",
  "--font-size-lg": "1.125rem",
  "--font-size-md": "1rem",
  "--font-size-sm": "0.875rem",
  "--font-size-xl": "1.25rem",
  "--font-size-xs": "0.75rem",
  "--font-weight-bold": "700",
  "--font-weight-medium": "500",
  "--font-weight-regular": "400",
  "--font-weight-semibold": "600",
  "--letter-spacing-caps": "0.04em",
  "--line-height-arabic-body": "1.7",
  "--line-height-arabic-heading": "1.45",
  "--line-height-body": "1.5",
  "--line-height-heading": "1.25",
  "--line-height-latin-body": "1.5",
  "--line-height-latin-heading": "1.25",
  "--radius-full": "9999px",
  "--radius-lg": "10px",
  "--radius-md": "6px",
  "--radius-none": "0",
  "--radius-sm": "4px",
  "--radius-xl": "16px",
  "--size-bottomnav-height": "64px",
  "--size-content-max": "1280px",
  "--size-control-lg": "48px",
  "--size-control-md": "40px",
  "--size-control-sm": "32px",
  "--size-header-height": "56px",
  "--size-sidenav-collapsed": "72px",
  "--size-sidenav-width": "264px",
  "--size-text-max": "720px",
  "--size-touch-target": "44px",
  "--space-0": "0",
  "--space-0-5": "0.125rem",
  "--space-1": "0.25rem",
  "--space-10": "2.5rem",
  "--space-12": "3rem",
  "--space-16": "4rem",
  "--space-2": "0.5rem",
  "--space-3": "0.75rem",
  "--space-4": "1rem",
  "--space-5": "1.25rem",
  "--space-6": "1.5rem",
  "--space-8": "2rem",
  "--z-base": "0",
  "--z-drawer": "1350",
  "--z-dropdown": "1000",
  "--z-header": "1200",
  "--z-modal": "1400",
  "--z-overlay": "1300",
  "--z-raised": "10",
  "--z-sticky": "1100",
  "--z-toast": "1500",
  "--z-tooltip": "1600",
  "color-scheme": "dark",
}
`;

exports[`shipped design tokens (golden record) > resolve to the recorded values: dark (system) · ar 1`] = `
{
  "--bp-2xl": "1440px",
  "--bp-lg": "900px",
  "--bp-md": "600px",
  "--bp-sm": "360px",
  "--bp-xl": "1200px",
  "--color-accent": "#62b5ab",
  "--color-accent-hover": "#94ccc5",
  "--color-accent-subtle": "#12302d",
  "--color-accent-text": "#86d3c9",
  "--color-amber-300": "#f3bd5a",
  "--color-amber-50": "#fff5e0",
  "--color-amber-500": "#c47600",
  "--color-amber-600": "#955800",
  "--color-amber-900": "#2f2311",
  "--color-bg": "#0e1415",
  "--color-blue-300": "#8fbdf5",
  "--color-blue-50": "#eaf1fb",
  "--color-blue-600": "#1f5daa",
  "--color-blue-700": "#194c8c",
  "--color-blue-900": "#102338",
  "--color-border": "#2b3639",
  "--color-border-strong": "#6b7b7f",
  "--color-brand-100": "#c6e4e0",
  "--color-brand-200": "#94ccc5",
  "--color-brand-300": "#62b5ab",
  "--color-brand-400": "#34998f",
  "--color-brand-50": "#e7f3f1",
  "--color-brand-500": "#177d74",
  "--color-brand-600": "#0f665f",
  "--color-brand-700": "#0c534d",
  "--color-brand-800": "#09403c",
  "--color-brand-900": "#07302d",
  "--color-brand-950": "#041f1d",
  "--color-danger": "#ff998d",
  "--color-danger-hover": "#ffb3aa",
  "--color-danger-subtle": "#3a1714",
  "--color-focus-ring": "#86d3c9",
  "--color-green-300": "#76d39a",
  "--color-green-50": "#e9f6ee",
  "--color-green-600": "#1d7a43",
  "--color-green-700": "#166236",
  "--color-green-900": "#0f2a1b",
  "--color-header": "#151d1f",
  "--color-header-border": "#2b3639",
  "--color-info": "#8fbdf5",
  "--color-info-subtle": "#102338",
  "--color-inverse-surface": "#e8eeef",
  "--color-inverse-text": "#121a1c",
  "--color-nav": "#151d1f",
  "--color-nav-border": "#2b3639",
  "--color-nav-item-current": "#12302d",
  "--color-nav-item-hover": "#223033",
  "--color-neutral-0": "#ffffff",
  "--color-neutral-100": "#e3e9ea",
  "--color-neutral-200": "#cbd4d6",
  "--color-neutral-25": "#f8fafa",
  "--color-neutral-300": "#a7b4b7",
  "--color-neutral-400": "#7a898d",
  "--color-neutral-50": "#f2f5f5",
  "--color-neutral-500": "#5b6a6e",
  "--color-neutral-600": "#465357",
  "--color-neutral-700": "#333e41",
  "--color-neutral-800": "#222b2e",
  "--color-neutral-850": "#192123",
  "--color-neutral-900": "#121a1c",
  "--color-neutral-950": "#0b1112",
  "--color-on-accent": "#041f1d",
  "--color-on-danger": "#2a0906",
  "--color-on-header": "#e8eeef",
  "--color-on-header-muted": "#aab7ba",
  "--color-on-nav": "#e8eeef",
  "--color-on-nav-item-current": "#86d3c9",
  "--color-on-nav-muted": "#aab7ba",
  "--color-on-primary": "#041f1d",
  "--color-overlay": "rgba(0, 0, 0, 0.65)",
  "--color-primary": "#62b5ab",
  "--color-primary-hover": "#94ccc5",
  "--color-primary-subtle": "#12302d",
  "--color-primary-text": "#86d3c9",
  "--color-red-300": "#ff998d",
  "--color-red-50": "#fdeeec",
  "--color-red-600": "#b42318",
  "--color-red-700": "#931c14",
  "--color-red-900": "#3a1714",
  "--color-success": "#76d39a",
  "--color-success-subtle": "#0f2a1b",
  "--color-surface": "#151d1f",
  "--color-surface-hover": "#223033",
  "--color-surface-raised": "#1c2628",
  "--color-surface-selected": "#12302d",
  "--color-surface-sunken": "#0a0f10",
  "--color-text": "#e8eeef",
  "--color-text-disabled": "#5e6c70",
  "--color-text-muted": "#aab7ba",
  "--color-text-subtle": "#8e9ca0",
  "--color-warning": "#f3bd5a",
  "--color-warning-strong": "#f3bd5a",
  "--color-warning-subtle": "#2f2311",
  "--duration-base": "160ms",
  "--duration-fast": "100ms",
  "--duration-instant": "0ms",
  "--duration-slow": "240ms",
  "--duration-slower": "360ms",
  "--easing-enter": "cubic-bezier(0, 0, 0, 1)",
  "--easing-exit": "cubic-bezier(0.3, 0, 1, 1)",
  "--easing-standard": "cubic-bezier(0.2, 0, 0, 1)",
  "--elevation-0": "none",
  "--elevation-1": "0 1px 2px rgba(0, 0, 0, 0.40)",
  "--elevation-2": "0 2px 6px rgba(0, 0, 0, 0.45)",
  "--elevation-3": "0 8px 20px rgba(0, 0, 0, 0.50)",
  "--elevation-4": "0 16px 40px rgba(0, 0, 0, 0.60)",
  "--focus-ring": "0 0 0 2px #0e1415, 0 0 0 4px #86d3c9",
  "--font-family-arabic": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-base": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-latin": ""IBM Plex Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, system-ui, sans-serif",
  "--font-family-mono": ""IBM Plex Mono", ui-monospace, "SFMono-Regular", Menlo, Consolas, monospace",
  "--font-size-2xl": "1.6875rem",
  "--font-size-3xl": "2.0625rem",
  "--font-size-4xl": "2.5rem",
  "--font-size-arabic-2xl": "1.6875rem",
  "--font-size-arabic-3xl": "2.0625rem",
  "--font-size-arabic-4xl": "2.5rem",
  "--font-size-arabic-lg": "1.25rem",
  "--font-size-arabic-md": "1.125rem",
  "--font-size-arabic-sm": "0.96875rem",
  "--font-size-arabic-xl": "1.40625rem",
  "--font-size-arabic-xs": "0.84375rem",
  "--font-size-latin-2xl": "1.5rem",
  "--font-size-latin-3xl": "1.875rem",
  "--font-size-latin-4xl": "2.25rem",
  "--font-size-latin-lg": "1.125rem",
  "--font-size-latin-md": "1rem",
  "--font-size-latin-sm": "0.875rem",
  "--font-size-latin-xl": "1.25rem",
  "--font-size-latin-xs": "0.75rem",
  "--font-size-lg": "1.25rem",
  "--font-size-md": "1.125rem",
  "--font-size-sm": "0.96875rem",
  "--font-size-xl": "1.40625rem",
  "--font-size-xs": "0.84375rem",
  "--font-weight-bold": "700",
  "--font-weight-medium": "500",
  "--font-weight-regular": "400",
  "--font-weight-semibold": "600",
  "--letter-spacing-caps": "0",
  "--line-height-arabic-body": "1.7",
  "--line-height-arabic-heading": "1.45",
  "--line-height-body": "1.7",
  "--line-height-heading": "1.45",
  "--line-height-latin-body": "1.5",
  "--line-height-latin-heading": "1.25",
  "--radius-full": "9999px",
  "--radius-lg": "10px",
  "--radius-md": "6px",
  "--radius-none": "0",
  "--radius-sm": "4px",
  "--radius-xl": "16px",
  "--size-bottomnav-height": "64px",
  "--size-content-max": "1280px",
  "--size-control-lg": "48px",
  "--size-control-md": "40px",
  "--size-control-sm": "32px",
  "--size-header-height": "56px",
  "--size-sidenav-collapsed": "72px",
  "--size-sidenav-width": "264px",
  "--size-text-max": "720px",
  "--size-touch-target": "44px",
  "--space-0": "0",
  "--space-0-5": "0.125rem",
  "--space-1": "0.25rem",
  "--space-10": "2.5rem",
  "--space-12": "3rem",
  "--space-16": "4rem",
  "--space-2": "0.5rem",
  "--space-3": "0.75rem",
  "--space-4": "1rem",
  "--space-5": "1.25rem",
  "--space-6": "1.5rem",
  "--space-8": "2rem",
  "--z-base": "0",
  "--z-drawer": "1350",
  "--z-dropdown": "1000",
  "--z-header": "1200",
  "--z-modal": "1400",
  "--z-overlay": "1300",
  "--z-raised": "10",
  "--z-sticky": "1100",
  "--z-toast": "1500",
  "--z-tooltip": "1600",
  "color-scheme": "dark",
}
`;

exports[`shipped design tokens (golden record) > resolve to the recorded values: light (app setting, system dark) · ar 1`] = `
{
  "--bp-2xl": "1440px",
  "--bp-lg": "900px",
  "--bp-md": "600px",
  "--bp-sm": "360px",
  "--bp-xl": "1200px",
  "--color-accent": "#0f665f",
  "--color-accent-hover": "#0c534d",
  "--color-accent-subtle": "#e7f3f1",
  "--color-accent-text": "#0c534d",
  "--color-amber-300": "#f3bd5a",
  "--color-amber-50": "#fff5e0",
  "--color-amber-500": "#c47600",
  "--color-amber-600": "#955800",
  "--color-amber-900": "#2f2311",
  "--color-bg": "#f2f5f5",
  "--color-blue-300": "#8fbdf5",
  "--color-blue-50": "#eaf1fb",
  "--color-blue-600": "#1f5daa",
  "--color-blue-700": "#194c8c",
  "--color-blue-900": "#102338",
  "--color-border": "#cbd4d6",
  "--color-border-strong": "#7a898d",
  "--color-brand-100": "#c6e4e0",
  "--color-brand-200": "#94ccc5",
  "--color-brand-300": "#62b5ab",
  "--color-brand-400": "#34998f",
  "--color-brand-50": "#e7f3f1",
  "--color-brand-500": "#177d74",
  "--color-brand-600": "#0f665f",
  "--color-brand-700": "#0c534d",
  "--color-brand-800": "#09403c",
  "--color-brand-900": "#07302d",
  "--color-brand-950": "#041f1d",
  "--color-danger": "#b42318",
  "--color-danger-hover": "#931c14",
  "--color-danger-subtle": "#fdeeec",
  "--color-focus-ring": "#177d74",
  "--color-green-300": "#76d39a",
  "--color-green-50": "#e9f6ee",
  "--color-green-600": "#1d7a43",
  "--color-green-700": "#166236",
  "--color-green-900": "#0f2a1b",
  "--color-header": "#ffffff",
  "--color-header-border": "#cbd4d6",
  "--color-info": "#1f5daa",
  "--color-info-subtle": "#eaf1fb",
  "--color-inverse-surface": "#192123",
  "--color-inverse-text": "#f8fafa",
  "--color-nav": "#ffffff",
  "--color-nav-border": "#cbd4d6",
  "--color-nav-item-current": "#e7f3f1",
  "--color-nav-item-hover": "#e3e9ea",
  "--color-neutral-0": "#ffffff",
  "--color-neutral-100": "#e3e9ea",
  "--color-neutral-200": "#cbd4d6",
  "--color-neutral-25": "#f8fafa",
  "--color-neutral-300": "#a7b4b7",
  "--color-neutral-400": "#7a898d",
  "--color-neutral-50": "#f2f5f5",
  "--color-neutral-500": "#5b6a6e",
  "--color-neutral-600": "#465357",
  "--color-neutral-700": "#333e41",
  "--color-neutral-800": "#222b2e",
  "--color-neutral-850": "#192123",
  "--color-neutral-900": "#121a1c",
  "--color-neutral-950": "#0b1112",
  "--color-on-accent": "#ffffff",
  "--color-on-danger": "#ffffff",
  "--color-on-header": "#121a1c",
  "--color-on-header-muted": "#465357",
  "--color-on-nav": "#121a1c",
  "--color-on-nav-item-current": "#0c534d",
  "--color-on-nav-muted": "#465357",
  "--color-on-primary": "#ffffff",
  "--color-overlay": "rgba(11, 17, 18, 0.55)",
  "--color-primary": "#0f665f",
  "--color-primary-hover": "#0c534d",
  "--color-primary-subtle": "#e7f3f1",
  "--color-primary-text": "#0c534d",
  "--color-red-300": "#ff998d",
  "--color-red-50": "#fdeeec",
  "--color-red-600": "#b42318",
  "--color-red-700": "#931c14",
  "--color-red-900": "#3a1714",
  "--color-success": "#1d7a43",
  "--color-success-subtle": "#e9f6ee",
  "--color-surface": "#ffffff",
  "--color-surface-hover": "#e3e9ea",
  "--color-surface-raised": "#ffffff",
  "--color-surface-selected": "#e7f3f1",
  "--color-surface-sunken": "#f8fafa",
  "--color-text": "#121a1c",
  "--color-text-disabled": "#7a898d",
  "--color-text-muted": "#465357",
  "--color-text-subtle": "#5b6a6e",
  "--color-warning": "#955800",
  "--color-warning-strong": "#c47600",
  "--color-warning-subtle": "#fff5e0",
  "--duration-base": "160ms",
  "--duration-fast": "100ms",
  "--duration-instant": "0ms",
  "--duration-slow": "240ms",
  "--duration-slower": "360ms",
  "--easing-enter": "cubic-bezier(0, 0, 0, 1)",
  "--easing-exit": "cubic-bezier(0.3, 0, 1, 1)",
  "--easing-standard": "cubic-bezier(0.2, 0, 0, 1)",
  "--elevation-0": "none",
  "--elevation-1": "0 1px 2px rgba(18, 26, 28, 0.06), 0 1px 3px rgba(18, 26, 28, 0.08)",
  "--elevation-2": "0 2px 4px rgba(18, 26, 28, 0.06), 0 4px 10px rgba(18, 26, 28, 0.08)",
  "--elevation-3": "0 6px 12px rgba(18, 26, 28, 0.08), 0 12px 28px rgba(18, 26, 28, 0.12)",
  "--elevation-4": "0 12px 24px rgba(18, 26, 28, 0.12), 0 24px 56px rgba(18, 26, 28, 0.18)",
  "--focus-ring": "0 0 0 2px #f2f5f5, 0 0 0 4px #177d74",
  "--font-family-arabic": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-base": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-latin": ""IBM Plex Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, system-ui, sans-serif",
  "--font-family-mono": ""IBM Plex Mono", ui-monospace, "SFMono-Regular", Menlo, Consolas, monospace",
  "--font-size-2xl": "1.6875rem",
  "--font-size-3xl": "2.0625rem",
  "--font-size-4xl": "2.5rem",
  "--font-size-arabic-2xl": "1.6875rem",
  "--font-size-arabic-3xl": "2.0625rem",
  "--font-size-arabic-4xl": "2.5rem",
  "--font-size-arabic-lg": "1.25rem",
  "--font-size-arabic-md": "1.125rem",
  "--font-size-arabic-sm": "0.96875rem",
  "--font-size-arabic-xl": "1.40625rem",
  "--font-size-arabic-xs": "0.84375rem",
  "--font-size-latin-2xl": "1.5rem",
  "--font-size-latin-3xl": "1.875rem",
  "--font-size-latin-4xl": "2.25rem",
  "--font-size-latin-lg": "1.125rem",
  "--font-size-latin-md": "1rem",
  "--font-size-latin-sm": "0.875rem",
  "--font-size-latin-xl": "1.25rem",
  "--font-size-latin-xs": "0.75rem",
  "--font-size-lg": "1.25rem",
  "--font-size-md": "1.125rem",
  "--font-size-sm": "0.96875rem",
  "--font-size-xl": "1.40625rem",
  "--font-size-xs": "0.84375rem",
  "--font-weight-bold": "700",
  "--font-weight-medium": "500",
  "--font-weight-regular": "400",
  "--font-weight-semibold": "600",
  "--letter-spacing-caps": "0",
  "--line-height-arabic-body": "1.7",
  "--line-height-arabic-heading": "1.45",
  "--line-height-body": "1.7",
  "--line-height-heading": "1.45",
  "--line-height-latin-body": "1.5",
  "--line-height-latin-heading": "1.25",
  "--radius-full": "9999px",
  "--radius-lg": "10px",
  "--radius-md": "6px",
  "--radius-none": "0",
  "--radius-sm": "4px",
  "--radius-xl": "16px",
  "--size-bottomnav-height": "64px",
  "--size-content-max": "1280px",
  "--size-control-lg": "48px",
  "--size-control-md": "40px",
  "--size-control-sm": "32px",
  "--size-header-height": "56px",
  "--size-sidenav-collapsed": "72px",
  "--size-sidenav-width": "264px",
  "--size-text-max": "720px",
  "--size-touch-target": "44px",
  "--space-0": "0",
  "--space-0-5": "0.125rem",
  "--space-1": "0.25rem",
  "--space-10": "2.5rem",
  "--space-12": "3rem",
  "--space-16": "4rem",
  "--space-2": "0.5rem",
  "--space-3": "0.75rem",
  "--space-4": "1rem",
  "--space-5": "1.25rem",
  "--space-6": "1.5rem",
  "--space-8": "2rem",
  "--z-base": "0",
  "--z-drawer": "1350",
  "--z-dropdown": "1000",
  "--z-header": "1200",
  "--z-modal": "1400",
  "--z-overlay": "1300",
  "--z-raised": "10",
  "--z-sticky": "1100",
  "--z-toast": "1500",
  "--z-tooltip": "1600",
  "color-scheme": "light",
}
`;

exports[`shipped design tokens (golden record) > resolve to the recorded values: light · ar 1`] = `
{
  "--bp-2xl": "1440px",
  "--bp-lg": "900px",
  "--bp-md": "600px",
  "--bp-sm": "360px",
  "--bp-xl": "1200px",
  "--color-accent": "#0f665f",
  "--color-accent-hover": "#0c534d",
  "--color-accent-subtle": "#e7f3f1",
  "--color-accent-text": "#0c534d",
  "--color-amber-300": "#f3bd5a",
  "--color-amber-50": "#fff5e0",
  "--color-amber-500": "#c47600",
  "--color-amber-600": "#955800",
  "--color-amber-900": "#2f2311",
  "--color-bg": "#f2f5f5",
  "--color-blue-300": "#8fbdf5",
  "--color-blue-50": "#eaf1fb",
  "--color-blue-600": "#1f5daa",
  "--color-blue-700": "#194c8c",
  "--color-blue-900": "#102338",
  "--color-border": "#cbd4d6",
  "--color-border-strong": "#7a898d",
  "--color-brand-100": "#c6e4e0",
  "--color-brand-200": "#94ccc5",
  "--color-brand-300": "#62b5ab",
  "--color-brand-400": "#34998f",
  "--color-brand-50": "#e7f3f1",
  "--color-brand-500": "#177d74",
  "--color-brand-600": "#0f665f",
  "--color-brand-700": "#0c534d",
  "--color-brand-800": "#09403c",
  "--color-brand-900": "#07302d",
  "--color-brand-950": "#041f1d",
  "--color-danger": "#b42318",
  "--color-danger-hover": "#931c14",
  "--color-danger-subtle": "#fdeeec",
  "--color-focus-ring": "#177d74",
  "--color-green-300": "#76d39a",
  "--color-green-50": "#e9f6ee",
  "--color-green-600": "#1d7a43",
  "--color-green-700": "#166236",
  "--color-green-900": "#0f2a1b",
  "--color-header": "#ffffff",
  "--color-header-border": "#cbd4d6",
  "--color-info": "#1f5daa",
  "--color-info-subtle": "#eaf1fb",
  "--color-inverse-surface": "#192123",
  "--color-inverse-text": "#f8fafa",
  "--color-nav": "#ffffff",
  "--color-nav-border": "#cbd4d6",
  "--color-nav-item-current": "#e7f3f1",
  "--color-nav-item-hover": "#e3e9ea",
  "--color-neutral-0": "#ffffff",
  "--color-neutral-100": "#e3e9ea",
  "--color-neutral-200": "#cbd4d6",
  "--color-neutral-25": "#f8fafa",
  "--color-neutral-300": "#a7b4b7",
  "--color-neutral-400": "#7a898d",
  "--color-neutral-50": "#f2f5f5",
  "--color-neutral-500": "#5b6a6e",
  "--color-neutral-600": "#465357",
  "--color-neutral-700": "#333e41",
  "--color-neutral-800": "#222b2e",
  "--color-neutral-850": "#192123",
  "--color-neutral-900": "#121a1c",
  "--color-neutral-950": "#0b1112",
  "--color-on-accent": "#ffffff",
  "--color-on-danger": "#ffffff",
  "--color-on-header": "#121a1c",
  "--color-on-header-muted": "#465357",
  "--color-on-nav": "#121a1c",
  "--color-on-nav-item-current": "#0c534d",
  "--color-on-nav-muted": "#465357",
  "--color-on-primary": "#ffffff",
  "--color-overlay": "rgba(11, 17, 18, 0.55)",
  "--color-primary": "#0f665f",
  "--color-primary-hover": "#0c534d",
  "--color-primary-subtle": "#e7f3f1",
  "--color-primary-text": "#0c534d",
  "--color-red-300": "#ff998d",
  "--color-red-50": "#fdeeec",
  "--color-red-600": "#b42318",
  "--color-red-700": "#931c14",
  "--color-red-900": "#3a1714",
  "--color-success": "#1d7a43",
  "--color-success-subtle": "#e9f6ee",
  "--color-surface": "#ffffff",
  "--color-surface-hover": "#e3e9ea",
  "--color-surface-raised": "#ffffff",
  "--color-surface-selected": "#e7f3f1",
  "--color-surface-sunken": "#f8fafa",
  "--color-text": "#121a1c",
  "--color-text-disabled": "#7a898d",
  "--color-text-muted": "#465357",
  "--color-text-subtle": "#5b6a6e",
  "--color-warning": "#955800",
  "--color-warning-strong": "#c47600",
  "--color-warning-subtle": "#fff5e0",
  "--duration-base": "160ms",
  "--duration-fast": "100ms",
  "--duration-instant": "0ms",
  "--duration-slow": "240ms",
  "--duration-slower": "360ms",
  "--easing-enter": "cubic-bezier(0, 0, 0, 1)",
  "--easing-exit": "cubic-bezier(0.3, 0, 1, 1)",
  "--easing-standard": "cubic-bezier(0.2, 0, 0, 1)",
  "--elevation-0": "none",
  "--elevation-1": "0 1px 2px rgba(18, 26, 28, 0.06), 0 1px 3px rgba(18, 26, 28, 0.08)",
  "--elevation-2": "0 2px 4px rgba(18, 26, 28, 0.06), 0 4px 10px rgba(18, 26, 28, 0.08)",
  "--elevation-3": "0 6px 12px rgba(18, 26, 28, 0.08), 0 12px 28px rgba(18, 26, 28, 0.12)",
  "--elevation-4": "0 12px 24px rgba(18, 26, 28, 0.12), 0 24px 56px rgba(18, 26, 28, 0.18)",
  "--focus-ring": "0 0 0 2px #f2f5f5, 0 0 0 4px #177d74",
  "--font-family-arabic": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-base": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-latin": ""IBM Plex Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, system-ui, sans-serif",
  "--font-family-mono": ""IBM Plex Mono", ui-monospace, "SFMono-Regular", Menlo, Consolas, monospace",
  "--font-size-2xl": "1.6875rem",
  "--font-size-3xl": "2.0625rem",
  "--font-size-4xl": "2.5rem",
  "--font-size-arabic-2xl": "1.6875rem",
  "--font-size-arabic-3xl": "2.0625rem",
  "--font-size-arabic-4xl": "2.5rem",
  "--font-size-arabic-lg": "1.25rem",
  "--font-size-arabic-md": "1.125rem",
  "--font-size-arabic-sm": "0.96875rem",
  "--font-size-arabic-xl": "1.40625rem",
  "--font-size-arabic-xs": "0.84375rem",
  "--font-size-latin-2xl": "1.5rem",
  "--font-size-latin-3xl": "1.875rem",
  "--font-size-latin-4xl": "2.25rem",
  "--font-size-latin-lg": "1.125rem",
  "--font-size-latin-md": "1rem",
  "--font-size-latin-sm": "0.875rem",
  "--font-size-latin-xl": "1.25rem",
  "--font-size-latin-xs": "0.75rem",
  "--font-size-lg": "1.25rem",
  "--font-size-md": "1.125rem",
  "--font-size-sm": "0.96875rem",
  "--font-size-xl": "1.40625rem",
  "--font-size-xs": "0.84375rem",
  "--font-weight-bold": "700",
  "--font-weight-medium": "500",
  "--font-weight-regular": "400",
  "--font-weight-semibold": "600",
  "--letter-spacing-caps": "0",
  "--line-height-arabic-body": "1.7",
  "--line-height-arabic-heading": "1.45",
  "--line-height-body": "1.7",
  "--line-height-heading": "1.45",
  "--line-height-latin-body": "1.5",
  "--line-height-latin-heading": "1.25",
  "--radius-full": "9999px",
  "--radius-lg": "10px",
  "--radius-md": "6px",
  "--radius-none": "0",
  "--radius-sm": "4px",
  "--radius-xl": "16px",
  "--size-bottomnav-height": "64px",
  "--size-content-max": "1280px",
  "--size-control-lg": "48px",
  "--size-control-md": "40px",
  "--size-control-sm": "32px",
  "--size-header-height": "56px",
  "--size-sidenav-collapsed": "72px",
  "--size-sidenav-width": "264px",
  "--size-text-max": "720px",
  "--size-touch-target": "44px",
  "--space-0": "0",
  "--space-0-5": "0.125rem",
  "--space-1": "0.25rem",
  "--space-10": "2.5rem",
  "--space-12": "3rem",
  "--space-16": "4rem",
  "--space-2": "0.5rem",
  "--space-3": "0.75rem",
  "--space-4": "1rem",
  "--space-5": "1.25rem",
  "--space-6": "1.5rem",
  "--space-8": "2rem",
  "--z-base": "0",
  "--z-drawer": "1350",
  "--z-dropdown": "1000",
  "--z-header": "1200",
  "--z-modal": "1400",
  "--z-overlay": "1300",
  "--z-raised": "10",
  "--z-sticky": "1100",
  "--z-toast": "1500",
  "--z-tooltip": "1600",
  "color-scheme": "light",
}
`;

exports[`shipped design tokens (golden record) > resolve to the recorded values: light · en 1`] = `
{
  "--bp-2xl": "1440px",
  "--bp-lg": "900px",
  "--bp-md": "600px",
  "--bp-sm": "360px",
  "--bp-xl": "1200px",
  "--color-accent": "#0f665f",
  "--color-accent-hover": "#0c534d",
  "--color-accent-subtle": "#e7f3f1",
  "--color-accent-text": "#0c534d",
  "--color-amber-300": "#f3bd5a",
  "--color-amber-50": "#fff5e0",
  "--color-amber-500": "#c47600",
  "--color-amber-600": "#955800",
  "--color-amber-900": "#2f2311",
  "--color-bg": "#f2f5f5",
  "--color-blue-300": "#8fbdf5",
  "--color-blue-50": "#eaf1fb",
  "--color-blue-600": "#1f5daa",
  "--color-blue-700": "#194c8c",
  "--color-blue-900": "#102338",
  "--color-border": "#cbd4d6",
  "--color-border-strong": "#7a898d",
  "--color-brand-100": "#c6e4e0",
  "--color-brand-200": "#94ccc5",
  "--color-brand-300": "#62b5ab",
  "--color-brand-400": "#34998f",
  "--color-brand-50": "#e7f3f1",
  "--color-brand-500": "#177d74",
  "--color-brand-600": "#0f665f",
  "--color-brand-700": "#0c534d",
  "--color-brand-800": "#09403c",
  "--color-brand-900": "#07302d",
  "--color-brand-950": "#041f1d",
  "--color-danger": "#b42318",
  "--color-danger-hover": "#931c14",
  "--color-danger-subtle": "#fdeeec",
  "--color-focus-ring": "#177d74",
  "--color-green-300": "#76d39a",
  "--color-green-50": "#e9f6ee",
  "--color-green-600": "#1d7a43",
  "--color-green-700": "#166236",
  "--color-green-900": "#0f2a1b",
  "--color-header": "#ffffff",
  "--color-header-border": "#cbd4d6",
  "--color-info": "#1f5daa",
  "--color-info-subtle": "#eaf1fb",
  "--color-inverse-surface": "#192123",
  "--color-inverse-text": "#f8fafa",
  "--color-nav": "#ffffff",
  "--color-nav-border": "#cbd4d6",
  "--color-nav-item-current": "#e7f3f1",
  "--color-nav-item-hover": "#e3e9ea",
  "--color-neutral-0": "#ffffff",
  "--color-neutral-100": "#e3e9ea",
  "--color-neutral-200": "#cbd4d6",
  "--color-neutral-25": "#f8fafa",
  "--color-neutral-300": "#a7b4b7",
  "--color-neutral-400": "#7a898d",
  "--color-neutral-50": "#f2f5f5",
  "--color-neutral-500": "#5b6a6e",
  "--color-neutral-600": "#465357",
  "--color-neutral-700": "#333e41",
  "--color-neutral-800": "#222b2e",
  "--color-neutral-850": "#192123",
  "--color-neutral-900": "#121a1c",
  "--color-neutral-950": "#0b1112",
  "--color-on-accent": "#ffffff",
  "--color-on-danger": "#ffffff",
  "--color-on-header": "#121a1c",
  "--color-on-header-muted": "#465357",
  "--color-on-nav": "#121a1c",
  "--color-on-nav-item-current": "#0c534d",
  "--color-on-nav-muted": "#465357",
  "--color-on-primary": "#ffffff",
  "--color-overlay": "rgba(11, 17, 18, 0.55)",
  "--color-primary": "#0f665f",
  "--color-primary-hover": "#0c534d",
  "--color-primary-subtle": "#e7f3f1",
  "--color-primary-text": "#0c534d",
  "--color-red-300": "#ff998d",
  "--color-red-50": "#fdeeec",
  "--color-red-600": "#b42318",
  "--color-red-700": "#931c14",
  "--color-red-900": "#3a1714",
  "--color-success": "#1d7a43",
  "--color-success-subtle": "#e9f6ee",
  "--color-surface": "#ffffff",
  "--color-surface-hover": "#e3e9ea",
  "--color-surface-raised": "#ffffff",
  "--color-surface-selected": "#e7f3f1",
  "--color-surface-sunken": "#f8fafa",
  "--color-text": "#121a1c",
  "--color-text-disabled": "#7a898d",
  "--color-text-muted": "#465357",
  "--color-text-subtle": "#5b6a6e",
  "--color-warning": "#955800",
  "--color-warning-strong": "#c47600",
  "--color-warning-subtle": "#fff5e0",
  "--duration-base": "160ms",
  "--duration-fast": "100ms",
  "--duration-instant": "0ms",
  "--duration-slow": "240ms",
  "--duration-slower": "360ms",
  "--easing-enter": "cubic-bezier(0, 0, 0, 1)",
  "--easing-exit": "cubic-bezier(0.3, 0, 1, 1)",
  "--easing-standard": "cubic-bezier(0.2, 0, 0, 1)",
  "--elevation-0": "none",
  "--elevation-1": "0 1px 2px rgba(18, 26, 28, 0.06), 0 1px 3px rgba(18, 26, 28, 0.08)",
  "--elevation-2": "0 2px 4px rgba(18, 26, 28, 0.06), 0 4px 10px rgba(18, 26, 28, 0.08)",
  "--elevation-3": "0 6px 12px rgba(18, 26, 28, 0.08), 0 12px 28px rgba(18, 26, 28, 0.12)",
  "--elevation-4": "0 12px 24px rgba(18, 26, 28, 0.12), 0 24px 56px rgba(18, 26, 28, 0.18)",
  "--focus-ring": "0 0 0 2px #f2f5f5, 0 0 0 4px #177d74",
  "--font-family-arabic": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-base": ""IBM Plex Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, system-ui, sans-serif",
  "--font-family-latin": ""IBM Plex Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, system-ui, sans-serif",
  "--font-family-mono": ""IBM Plex Mono", ui-monospace, "SFMono-Regular", Menlo, Consolas, monospace",
  "--font-size-2xl": "1.5rem",
  "--font-size-3xl": "1.875rem",
  "--font-size-4xl": "2.25rem",
  "--font-size-arabic-2xl": "1.6875rem",
  "--font-size-arabic-3xl": "2.0625rem",
  "--font-size-arabic-4xl": "2.5rem",
  "--font-size-arabic-lg": "1.25rem",
  "--font-size-arabic-md": "1.125rem",
  "--font-size-arabic-sm": "0.96875rem",
  "--font-size-arabic-xl": "1.40625rem",
  "--font-size-arabic-xs": "0.84375rem",
  "--font-size-latin-2xl": "1.5rem",
  "--font-size-latin-3xl": "1.875rem",
  "--font-size-latin-4xl": "2.25rem",
  "--font-size-latin-lg": "1.125rem",
  "--font-size-latin-md": "1rem",
  "--font-size-latin-sm": "0.875rem",
  "--font-size-latin-xl": "1.25rem",
  "--font-size-latin-xs": "0.75rem",
  "--font-size-lg": "1.125rem",
  "--font-size-md": "1rem",
  "--font-size-sm": "0.875rem",
  "--font-size-xl": "1.25rem",
  "--font-size-xs": "0.75rem",
  "--font-weight-bold": "700",
  "--font-weight-medium": "500",
  "--font-weight-regular": "400",
  "--font-weight-semibold": "600",
  "--letter-spacing-caps": "0.04em",
  "--line-height-arabic-body": "1.7",
  "--line-height-arabic-heading": "1.45",
  "--line-height-body": "1.5",
  "--line-height-heading": "1.25",
  "--line-height-latin-body": "1.5",
  "--line-height-latin-heading": "1.25",
  "--radius-full": "9999px",
  "--radius-lg": "10px",
  "--radius-md": "6px",
  "--radius-none": "0",
  "--radius-sm": "4px",
  "--radius-xl": "16px",
  "--size-bottomnav-height": "64px",
  "--size-content-max": "1280px",
  "--size-control-lg": "48px",
  "--size-control-md": "40px",
  "--size-control-sm": "32px",
  "--size-header-height": "56px",
  "--size-sidenav-collapsed": "72px",
  "--size-sidenav-width": "264px",
  "--size-text-max": "720px",
  "--size-touch-target": "44px",
  "--space-0": "0",
  "--space-0-5": "0.125rem",
  "--space-1": "0.25rem",
  "--space-10": "2.5rem",
  "--space-12": "3rem",
  "--space-16": "4rem",
  "--space-2": "0.5rem",
  "--space-3": "0.75rem",
  "--space-4": "1rem",
  "--space-5": "1.25rem",
  "--space-6": "1.5rem",
  "--space-8": "2rem",
  "--z-base": "0",
  "--z-drawer": "1350",
  "--z-dropdown": "1000",
  "--z-header": "1200",
  "--z-modal": "1400",
  "--z-overlay": "1300",
  "--z-raised": "10",
  "--z-sticky": "1100",
  "--z-toast": "1500",
  "--z-tooltip": "1600",
  "color-scheme": "light",
}
`;

exports[`shipped design tokens (golden record) > resolve to the recorded values: reduced motion · ar 1`] = `
{
  "--bp-2xl": "1440px",
  "--bp-lg": "900px",
  "--bp-md": "600px",
  "--bp-sm": "360px",
  "--bp-xl": "1200px",
  "--color-accent": "#0f665f",
  "--color-accent-hover": "#0c534d",
  "--color-accent-subtle": "#e7f3f1",
  "--color-accent-text": "#0c534d",
  "--color-amber-300": "#f3bd5a",
  "--color-amber-50": "#fff5e0",
  "--color-amber-500": "#c47600",
  "--color-amber-600": "#955800",
  "--color-amber-900": "#2f2311",
  "--color-bg": "#f2f5f5",
  "--color-blue-300": "#8fbdf5",
  "--color-blue-50": "#eaf1fb",
  "--color-blue-600": "#1f5daa",
  "--color-blue-700": "#194c8c",
  "--color-blue-900": "#102338",
  "--color-border": "#cbd4d6",
  "--color-border-strong": "#7a898d",
  "--color-brand-100": "#c6e4e0",
  "--color-brand-200": "#94ccc5",
  "--color-brand-300": "#62b5ab",
  "--color-brand-400": "#34998f",
  "--color-brand-50": "#e7f3f1",
  "--color-brand-500": "#177d74",
  "--color-brand-600": "#0f665f",
  "--color-brand-700": "#0c534d",
  "--color-brand-800": "#09403c",
  "--color-brand-900": "#07302d",
  "--color-brand-950": "#041f1d",
  "--color-danger": "#b42318",
  "--color-danger-hover": "#931c14",
  "--color-danger-subtle": "#fdeeec",
  "--color-focus-ring": "#177d74",
  "--color-green-300": "#76d39a",
  "--color-green-50": "#e9f6ee",
  "--color-green-600": "#1d7a43",
  "--color-green-700": "#166236",
  "--color-green-900": "#0f2a1b",
  "--color-header": "#ffffff",
  "--color-header-border": "#cbd4d6",
  "--color-info": "#1f5daa",
  "--color-info-subtle": "#eaf1fb",
  "--color-inverse-surface": "#192123",
  "--color-inverse-text": "#f8fafa",
  "--color-nav": "#ffffff",
  "--color-nav-border": "#cbd4d6",
  "--color-nav-item-current": "#e7f3f1",
  "--color-nav-item-hover": "#e3e9ea",
  "--color-neutral-0": "#ffffff",
  "--color-neutral-100": "#e3e9ea",
  "--color-neutral-200": "#cbd4d6",
  "--color-neutral-25": "#f8fafa",
  "--color-neutral-300": "#a7b4b7",
  "--color-neutral-400": "#7a898d",
  "--color-neutral-50": "#f2f5f5",
  "--color-neutral-500": "#5b6a6e",
  "--color-neutral-600": "#465357",
  "--color-neutral-700": "#333e41",
  "--color-neutral-800": "#222b2e",
  "--color-neutral-850": "#192123",
  "--color-neutral-900": "#121a1c",
  "--color-neutral-950": "#0b1112",
  "--color-on-accent": "#ffffff",
  "--color-on-danger": "#ffffff",
  "--color-on-header": "#121a1c",
  "--color-on-header-muted": "#465357",
  "--color-on-nav": "#121a1c",
  "--color-on-nav-item-current": "#0c534d",
  "--color-on-nav-muted": "#465357",
  "--color-on-primary": "#ffffff",
  "--color-overlay": "rgba(11, 17, 18, 0.55)",
  "--color-primary": "#0f665f",
  "--color-primary-hover": "#0c534d",
  "--color-primary-subtle": "#e7f3f1",
  "--color-primary-text": "#0c534d",
  "--color-red-300": "#ff998d",
  "--color-red-50": "#fdeeec",
  "--color-red-600": "#b42318",
  "--color-red-700": "#931c14",
  "--color-red-900": "#3a1714",
  "--color-success": "#1d7a43",
  "--color-success-subtle": "#e9f6ee",
  "--color-surface": "#ffffff",
  "--color-surface-hover": "#e3e9ea",
  "--color-surface-raised": "#ffffff",
  "--color-surface-selected": "#e7f3f1",
  "--color-surface-sunken": "#f8fafa",
  "--color-text": "#121a1c",
  "--color-text-disabled": "#7a898d",
  "--color-text-muted": "#465357",
  "--color-text-subtle": "#5b6a6e",
  "--color-warning": "#955800",
  "--color-warning-strong": "#c47600",
  "--color-warning-subtle": "#fff5e0",
  "--duration-base": "0ms",
  "--duration-fast": "0ms",
  "--duration-instant": "0ms",
  "--duration-slow": "0ms",
  "--duration-slower": "0ms",
  "--easing-enter": "cubic-bezier(0, 0, 0, 1)",
  "--easing-exit": "cubic-bezier(0.3, 0, 1, 1)",
  "--easing-standard": "cubic-bezier(0.2, 0, 0, 1)",
  "--elevation-0": "none",
  "--elevation-1": "0 1px 2px rgba(18, 26, 28, 0.06), 0 1px 3px rgba(18, 26, 28, 0.08)",
  "--elevation-2": "0 2px 4px rgba(18, 26, 28, 0.06), 0 4px 10px rgba(18, 26, 28, 0.08)",
  "--elevation-3": "0 6px 12px rgba(18, 26, 28, 0.08), 0 12px 28px rgba(18, 26, 28, 0.12)",
  "--elevation-4": "0 12px 24px rgba(18, 26, 28, 0.12), 0 24px 56px rgba(18, 26, 28, 0.18)",
  "--focus-ring": "0 0 0 2px #f2f5f5, 0 0 0 4px #177d74",
  "--font-family-arabic": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-base": ""IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Kufi Arabic", "Segoe UI", Tahoma, "Geeza Pro", system-ui, sans-serif",
  "--font-family-latin": ""IBM Plex Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, system-ui, sans-serif",
  "--font-family-mono": ""IBM Plex Mono", ui-monospace, "SFMono-Regular", Menlo, Consolas, monospace",
  "--font-size-2xl": "1.6875rem",
  "--font-size-3xl": "2.0625rem",
  "--font-size-4xl": "2.5rem",
  "--font-size-arabic-2xl": "1.6875rem",
  "--font-size-arabic-3xl": "2.0625rem",
  "--font-size-arabic-4xl": "2.5rem",
  "--font-size-arabic-lg": "1.25rem",
  "--font-size-arabic-md": "1.125rem",
  "--font-size-arabic-sm": "0.96875rem",
  "--font-size-arabic-xl": "1.40625rem",
  "--font-size-arabic-xs": "0.84375rem",
  "--font-size-latin-2xl": "1.5rem",
  "--font-size-latin-3xl": "1.875rem",
  "--font-size-latin-4xl": "2.25rem",
  "--font-size-latin-lg": "1.125rem",
  "--font-size-latin-md": "1rem",
  "--font-size-latin-sm": "0.875rem",
  "--font-size-latin-xl": "1.25rem",
  "--font-size-latin-xs": "0.75rem",
  "--font-size-lg": "1.25rem",
  "--font-size-md": "1.125rem",
  "--font-size-sm": "0.96875rem",
  "--font-size-xl": "1.40625rem",
  "--font-size-xs": "0.84375rem",
  "--font-weight-bold": "700",
  "--font-weight-medium": "500",
  "--font-weight-regular": "400",
  "--font-weight-semibold": "600",
  "--letter-spacing-caps": "0",
  "--line-height-arabic-body": "1.7",
  "--line-height-arabic-heading": "1.45",
  "--line-height-body": "1.7",
  "--line-height-heading": "1.45",
  "--line-height-latin-body": "1.5",
  "--line-height-latin-heading": "1.25",
  "--radius-full": "9999px",
  "--radius-lg": "10px",
  "--radius-md": "6px",
  "--radius-none": "0",
  "--radius-sm": "4px",
  "--radius-xl": "16px",
  "--size-bottomnav-height": "64px",
  "--size-content-max": "1280px",
  "--size-control-lg": "48px",
  "--size-control-md": "40px",
  "--size-control-sm": "32px",
  "--size-header-height": "56px",
  "--size-sidenav-collapsed": "72px",
  "--size-sidenav-width": "264px",
  "--size-text-max": "720px",
  "--size-touch-target": "44px",
  "--space-0": "0",
  "--space-0-5": "0.125rem",
  "--space-1": "0.25rem",
  "--space-10": "2.5rem",
  "--space-12": "3rem",
  "--space-16": "4rem",
  "--space-2": "0.5rem",
  "--space-3": "0.75rem",
  "--space-4": "1rem",
  "--space-5": "1.25rem",
  "--space-6": "1.5rem",
  "--space-8": "2rem",
  "--z-base": "0",
  "--z-drawer": "1350",
  "--z-dropdown": "1000",
  "--z-header": "1200",
  "--z-modal": "1400",
  "--z-overlay": "1300",
  "--z-raised": "10",
  "--z-sticky": "1100",
  "--z-toast": "1500",
  "--z-tooltip": "1600",
  "color-scheme": "light",
}
`;
